# c_dynami_cstr

./: CMakeLists.txt  README.md  data.txt  main  main.c  my_str_t.c
examples/: funcs.c  reverse_words.c
include/: my_str_t.h
src/: my_str_t.c
