cmake_minimum_required (VERSION 2.6)
project (dynamic_str)
add_library(l SHARED src/my_str_t.c include/my_str_t.h)
add_executable(dynamic_str main.c)
add_executable(examples examples/funcs.c)
add_executable(reverse_words examples/reverse_words.c)
target_link_libraries(dynamic_str l)
target_link_libraries(examples l)
target_link_libraries(reverse_words l)